# indxr

./: .gitignore  LICENSE  QUICKSTART.md  README.md  indxr.toml.example  pyproject.toml
indxr/: __init__.py  cli.py  parser.py
indxr/generators/: __init__.py  book_pdfs.py  compact_index.py  master_index.py
obsidian-templates/: Book Index Example.md  Book Index Template.md  OBSIDIAN_GUIDE.md  README.md
